rename msLandscape api to signature_landscape and simplify parameters
